fix console height on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -22,9 +22,9 @@
 }
 
 .console {
-  /* border-top: 3px solid #ffefbd; */
+  border-top: 3px dashed #3c6e71;
   background-color: #2e1760;
-  /* height: 100%; */
+  height: 20%;
   padding: 0.5rem;
 }
 
@@ -124,6 +124,6 @@
   }
 
   .console {
-    height: 10%;
+    height: 20%;
   }
 }
